styles(About): fix padding, handle text overflow

--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -1,6 +1,5 @@
 #about {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,20 +27,23 @@
   }
 
   .about-me {
-    overflow-y: scroll;
-
     #alex-photo {
       height: 15rem;
       border: solid 0.5rem $color-black;
       border-radius: 1%;
-
+      
       @include md {
         height: 20rem;
       }
-
+      
       @include lg {
         height: 25rem;
       }
+    }
+    
+    .about-me__content {
+      margin-top: 5rem;
+      overflow-y: scroll;
     }
 
     p {
